<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/debug_fragment"
    tools:context=".view.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/MINI_rise"
            android:text="@string/MINI_rise"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>
         <Button
             android:id="@+id/MINI_fall"
             android:text="@string/MINI_fall"
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"/>
        <TextView
            android:id="@+id/MINI_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/USR_start"
            android:text="@string/USR_start"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>
        <TextView
            android:id="@+id/USR_text"
            android:text="hello USRR"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>
